# mtkclient

./: README.md  learning_resources.md  mtk  mtk.bat  mtk.py  mtk_console.spec  mtk_gui  mtk_gui.bat  mtk_gui.py  mtk_standalone.spec  pyproject.toml  requirements.txt  setup.py  stage2
.github/workflows/: auto-build.yml  build_exe.yml
Tools/: da_parser.py
mtkclient/Tools/: brom_to_offs  da_parser  da_parser.py  decode.py  emulate_preloader.py  enc_test.py  patch_legacy.py  patch_preloader.py  preloader_emu_mmc.py
mtkclient/config/: brom_config.py  mtk_config.py
mtkclient/gui/: main_gui.py  toolkit.py
mtkclient/src/da_xml/: da_xml.c
mtkclient/src/stage1/: emulate_payload.py
