[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mtkclient"
description = "Mediatek reverse engineering and flashing tools"
maintainers = [
    {name = "Bjoern Kerler", email = "info@revskills.de"}
]
readme = "README.md"
license = {file = "LICENSE"}
version = "2.0.0"
requires-python = ">= 3.8"
dependencies = [
    "pyusb",
    "pycryptodome",
    "pycryptodomex",
    "colorama",
    "shiboken6", 
    "pyside6",
    "mock",
    "pyserial",
    "fusepy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
keywords = ["mediatek", "mtk", "flashing", "reverse engineering", "firmware"]

[project.urls]
Repository = "https://github.com/bkerler/mtkclient.git"
Issues = "https://github.com/bkerler/mtkclient/issues"

[tool.setuptools]
# See also the MANIFEST.in file.
# We want to install all the files in the package directories...
include-package-data = true
script-files = ["mtk", "stage2", "mtk_gui"]
